--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
   },
   "homepage": "https://github.com/mahillas/currency_api",
   "dependencies": {
+    "bookshelf": "^0.8.1",
+    "cassandra-driver": "^2.1.1",
+    "co": "^4.5.4",
+    "co-cassandra": "0.0.1",
+    "knex": "^0.8.6",
     "koa": "^0.21.0",
     "koa-bodyparser": "^2.0.0",
     "koa-route": "^2.4.1",
     "mongoose": "^4.0.6",
+    "pg": "^4.4.0",
     "q": "^1.4.1",
     "winston": "^1.0.1"
   }
